[gd_scene load_steps=4 format=2]

[ext_resource path="res://application/Main.gd" type="Script" id=1]
[ext_resource path="res://application/GunPanel.gd" type="Script" id=2]
[ext_resource path="res://application/TargetPanel.gd" type="Script" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Messages" type="RichTextLabel" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -376.0
margin_right = -32.0
text = "Messages
"

[node name="GunPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.6
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="GunPanel"]
anchor_right = 1.0
anchor_bottom = 0.2
text = "Boom baloon babaher 3000 pro"
align = 1
valign = 1

[node name="AngleZButton" type="Button" parent="GunPanel"]
anchor_left = 0.05
anchor_top = 0.3
anchor_right = 0.2
anchor_bottom = 0.7
rect_pivot_offset = Vector2( 142, 147.2 )
text = "/\\"

[node name="AngleZValue" type="Label" parent="GunPanel"]
anchor_left = 0.05
anchor_top = 0.2
anchor_right = 0.2
anchor_bottom = 0.2
align = 1
valign = 1

[node name="AngleZLabel" type="Label" parent="GunPanel"]
anchor_left = 0.05
anchor_top = 0.8
anchor_right = 0.2
anchor_bottom = 0.8
text = "Angle Z"
align = 1
valign = 1

[node name="AngleXButton" type="Button" parent="GunPanel"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.45
anchor_bottom = 0.7
rect_pivot_offset = Vector2( 142, 147.2 )
text = "/\\"

[node name="AngleXValue" type="Label" parent="GunPanel"]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.45
anchor_bottom = 0.2
align = 1
valign = 1

[node name="AngleXLabel" type="Label" parent="GunPanel"]
anchor_left = 0.3
anchor_top = 0.8
anchor_right = 0.45
anchor_bottom = 0.8
text = "Angle X"
align = 1
valign = 1

[node name="PowerSlider" type="VSlider" parent="GunPanel"]
anchor_left = 0.55
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
min_value = 30.0
step = 10.0
value = 30.0
rounded = true

[node name="PowerValue" type="Label" parent="GunPanel"]
anchor_left = 0.55
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.2
align = 1
valign = 1

[node name="PowerLabel" type="Label" parent="GunPanel"]
anchor_left = 0.55
anchor_top = 0.8
anchor_right = 0.7
anchor_bottom = 0.8
text = "Power"
align = 1
valign = 1

[node name="ShootButton" type="Button" parent="GunPanel"]
anchor_left = 0.8
anchor_top = 0.4
anchor_right = 0.95
anchor_bottom = 0.6
text = "Shoot"

[node name="TargetPanel" type="Panel" parent="."]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="TargetPanel"]
anchor_right = 1.0
anchor_bottom = 0.2
text = "Target panel"
align = 1
valign = 1

[node name="DistanceLabel" type="Label" parent="TargetPanel"]
anchor_left = 0.05
anchor_top = 0.6
anchor_right = 0.2
anchor_bottom = 0.6
text = "Z"
align = 1
valign = 1

[node name="DistanceSlider" type="HSlider" parent="TargetPanel"]
anchor_left = 0.05
anchor_top = 0.3
anchor_right = 0.2
anchor_bottom = 0.5
min_value = 300.0
max_value = 800.0
step = 25.0
value = 500.0

[node name="DistanceValue" type="Label" parent="TargetPanel"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.2
anchor_bottom = 0.2
margin_top = 2.47955e-05
margin_bottom = 14.6
align = 1
valign = 1

[node name="OffsetLabel" type="Label" parent="TargetPanel"]
anchor_left = 0.3
anchor_top = 0.6
anchor_right = 0.45
anchor_bottom = 0.6
text = "X"
align = 1
valign = 1

[node name="OffsetSlider" type="HSlider" parent="TargetPanel"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.45
anchor_bottom = 0.5
min_value = -300.0
max_value = 300.0
step = 10.0

[node name="OffsetValue" type="Label" parent="TargetPanel"]
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.45
anchor_bottom = 0.2
margin_top = 2.47955e-05
align = 1
valign = 1

[node name="HeightLabel" type="Label" parent="TargetPanel"]
anchor_left = 0.55
anchor_top = 0.6
anchor_right = 0.7
anchor_bottom = 0.6
text = "Y"
align = 1
valign = 1

[node name="HeightSlider" type="HSlider" parent="TargetPanel"]
anchor_left = 0.55
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.5
min_value = 50.0
max_value = 250.0
value = 100.0

[node name="HeightValue" type="Label" parent="TargetPanel"]
anchor_left = 0.55
anchor_top = 0.1
anchor_right = 0.7
anchor_bottom = 0.2
margin_top = 2.47955e-05
align = 1
valign = 1

[node name="SizeLabel" type="Label" parent="TargetPanel"]
anchor_left = 0.8
anchor_top = 0.6
anchor_right = 0.95
anchor_bottom = 0.6
text = "Size"
align = 1
valign = 1

[node name="SizeSlider" type="HSlider" parent="TargetPanel"]
anchor_left = 0.8
anchor_top = 0.3
anchor_right = 0.95
anchor_bottom = 0.5
min_value = 32.0
max_value = 256.0
step = 8.0
value = 32.0

[node name="SizeValue" type="Label" parent="TargetPanel"]
anchor_left = 0.8
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.2
margin_top = 2.47955e-05
align = 1
valign = 1

[node name="SetupTarget" type="Button" parent="TargetPanel"]
anchor_left = 0.25
anchor_top = 0.75
anchor_right = 0.4
anchor_bottom = 0.95
text = "Setup"

[node name="RandomButton" type="Button" parent="TargetPanel"]
anchor_left = 0.6
anchor_top = 0.75
anchor_right = 0.75
anchor_bottom = 0.95
text = "Random"

[connection signal="button_down" from="GunPanel/AngleZButton" to="GunPanel" method="_on_AngleZButton_button_down"]
[connection signal="button_up" from="GunPanel/AngleZButton" to="GunPanel" method="_on_angle_button_released"]
[connection signal="button_down" from="GunPanel/AngleXButton" to="GunPanel" method="_on_AngleXButton_button_down"]
[connection signal="button_up" from="GunPanel/AngleXButton" to="GunPanel" method="_on_angle_button_released"]
[connection signal="drag_started" from="GunPanel/PowerSlider" to="GunPanel" method="_on_PowerSlider_drag_started"]
[connection signal="value_changed" from="GunPanel/PowerSlider" to="GunPanel" method="_on_PowerSlider_value_changed"]
[connection signal="pressed" from="GunPanel/ShootButton" to="GunPanel" method="_on_ShootButton_pressed"]
[connection signal="value_changed" from="TargetPanel/DistanceSlider" to="TargetPanel" method="_on_DistanceSlider_value_changed"]
[connection signal="value_changed" from="TargetPanel/OffsetSlider" to="TargetPanel" method="_on_OffsetSlider_value_changed"]
[connection signal="value_changed" from="TargetPanel/HeightSlider" to="TargetPanel" method="_on_HeightSlider_value_changed"]
[connection signal="value_changed" from="TargetPanel/SizeSlider" to="TargetPanel" method="_on_SizeSlider_value_changed"]
[connection signal="pressed" from="TargetPanel/SetupTarget" to="TargetPanel" method="_on_SetupTarget_pressed"]
[connection signal="pressed" from="TargetPanel/RandomButton" to="TargetPanel" method="_on_RandomButton_pressed"]
